Fix checking of checkboxes inside their label by not sending the duplicate event if the click was already within the form control.  b=96813  r=jkeiser  sr=jst